--- a/README.Rmd
+++ b/README.Rmd
@@ -31,7 +31,7 @@ devtools::install_github("jsta/DataflowR")
 
 see either:
 
-* the vignette at `doc/DataflowR.pdf`
+* the vignette at `inst/doc/DataflowR.pdf`
 
 * `??DataflowR` from the `R` console
 
