--- a/README.Rmd
+++ b/README.Rmd
@@ -15,6 +15,8 @@ knitr::opts_chunk$set(
 # DataflowR
 
 [![Project Status: Active - The project has reached a stable, usable state and is being actively developed.](http://www.repostatus.org/badges/latest/active.svg)](http://www.repostatus.org/#active)
+[![DOI](https://zenodo.org/badge/81863152.svg)](https://zenodo.org/badge/latestdoi/81863152)
+
 
 The `DataflowR` package is used to handle streaming output and discrete grab samples collected as part of the South Florida Water Mangement District's Florida Bay Dataflow monitoring program.
 
